move to another js

--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
         "board-buttons": async function (t, options) {
           return [
             {
-              icon: {
-                dark: "https://cdn.hyperdev.com/us-east-1%3A3d31b21c-01a0-4da2-8827-4bc6e88b7618%2Ficon-white.svg",
-                light: "https://cdn.hyperdev.com/us-east-1%3A3d31b21c-01a0-4da2-8827-4bc6e88b7618%2Ficon-black.svg",
-              },
+              icon: "https://cdn.hyperdev.com/us-east-1%3A3d31b21c-01a0-4da2-8827-4bc6e88b7618%2Ficon-black.svg",
               text: "Estimates",
               callback: await showEstimates,
               condition: "edit",
