--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         "board-buttons": async function (t, options) {
           return [
             {
-              icon: "https://cdn.hyperdev.com/us-east-1%3A3d31b21c-01a0-4da2-8827-4bc6e88b7618%2Ficon-black.svg",
+              icon: "/public/icons/wall-clock-24.png",
               text: "Estimates",
               callback: await showEstimates,
               condition: "edit",
