--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         "board-buttons": async function (t, options) {
           return [
             {
-              icon: "/public/icons/wall-clock-24.png",
+              icon: "./public/icons/wall-clock-24.png",
               text: "Estimates",
               callback: await showEstimates,
               condition: "edit",
