rename board button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           return [
             {
               icon: "./public/icons/wall-clock-24.png",
-              text: "Estimates",
+              text: "Show Estimates",
               callback: await showEstimates,
               condition: "edit",
             },
