--- a/public/EstimatesModal.html
+++ b/public/EstimatesModal.html
@@ -9,6 +9,6 @@
     <link rel="stylesheet" href="">
   </head>
   <body>
-    <script src="" async defer></script>
+    <h1>HELLO</h1>
   </body>
 </html>
