disable new show estimates button temporarily

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
               callback: await showEstimates,
               condition: "edit",
             },
-            {
-                icon: "./public/icons/wall-clock-24.png",
-                text: "New Show Estimates",
-                callback: await newShowEstimates,
-                condition: "admin",
-            },
+            // {
+            //     icon: "./public/icons/wall-clock-24.png",
+            //     text: "New Show Estimates",
+            //     callback: await newShowEstimates,
+            //     condition: "admin",
+            // },
           ];
         },
       });
