add team velocity function

--- a/index.html
+++ b/index.html
@@ -8,16 +8,23 @@
     <script src="https://p.trellocdn.com/power-up.min.js"></script>
     <script type="module">
       import { showEstimates } from "/public/js/board_button_show_estimates.js"
-      import { newShowEstimates } from "/public/js/board_button_new_show_estimates.js"
+      import { showTeamVelocity } from "/public/js/board_button_show_team_velocity.js"
+      // import { newShowEstimates } from "/public/js/board_button_new_show_estimates.js"
       TrelloPowerUp.initialize({
         "board-buttons": async function (trello, options) {
           return [
             {
               icon: "./public/icons/wall-clock-24.png",
-              text: "Show Estimates",
+              text: "Estimates",
               callback: await showEstimates,
               condition: "edit",
             },
+            {
+              icon: "./public/icons/clock-fast.png",
+              text: "Velocity",
+              callback: await showTeamVelocity,
+              condition: "edit",
+            }
             // {
             //     icon: "./public/icons/wall-clock-24.png",
             //     text: "New Show Estimates",
