use popup for now

--- a/public/TeamVelocity.html
+++ b/public/TeamVelocity.html
@@ -13,17 +13,21 @@
       const resultItems = t.arg('resultItems')
       console.log("ressssssssss", resultItems)
     }
+    loadData()
   </script>
-<thead>
-  <tr>
-    <th>username</th>
-    <th>Not Started</th>
-    <th>Doing</th>
-    <th>Done</th>
-  </tr>
-</thead>
-<tbody>
+  <table>
+    <thead>
+    <tr>
+      <th>username</th>
+      <th>Not Started</th>
+      <th>Doing</th>
+      <th>Done</th>
+    </tr>
+    </thead>
+    <tbody>
 
-</tbody>
+    </tbody>
+  </table>
+
 </body>
 </html>
