--- a/public/TeamVelocity.html
+++ b/public/TeamVelocity.html
@@ -33,7 +33,7 @@
         newRow.appendChild(tdDone)
         table.appendChild(newRow)
       }
-      const target = document.getElementById('table');
+      const target = document.getElementById('velocity-table');
       target.appendChild(table);
     }
     loadData()
