add board summary

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
               text: "Velocity",
               callback: await showTeamVelocity,
               condition: "edit",
-            }
-            // {
-            //     icon: "./public/icons/wall-clock-24.png",
-            //     text: "New Show Estimates",
-            //     callback: await newShowEstimates,
-            //     condition: "admin",
-            // },
+            },
+            {
+                icon: "./public/icons/wall-clock-24.png",
+                text: "Summary",
+                callback: await newShowEstimates,
+                condition: "admin",
+            },
           ];
         },
       });
