--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="module">
       import { showEstimates } from "/public/js/board_button_show_estimates.js"
       import { showTeamVelocity } from "/public/js/board_button_show_team_velocity.js"
-      // import { newShowEstimates } from "/public/js/board_button_new_show_estimates.js"
+      import { newShowEstimates } from "/public/js/board_button_new_show_estimates.js"
       TrelloPowerUp.initialize({
         "board-buttons": async function (trello, options) {
           return [
