--- a/public/BoardSummary.html
+++ b/public/BoardSummary.html
@@ -149,6 +149,7 @@
           this.loadEstimationsTableData();
           this.loadVelocityTableData();
           this.showVelocitiesTable();
+          console.log('ssssssssss', this)
         },
       });
     </script>
