--- a/public/BoardSummary.html
+++ b/public/BoardSummary.html
@@ -82,6 +82,7 @@
     </div>
 
     <script>
+      import { getNameByUserName } from '/public/js/map_usernames.js'
       new Vue({
         el: "#app_basic",
         data: {
@@ -125,7 +126,7 @@
             console.log('velocities', velocities)
             this.velocitiesTable.data = velocities.map((item) => {
               return {
-                user: item.username ?? "بدون اساینی",
+                user: getNameByUserName(item.username ?? "بدون اساینی"),
                 notStarted: item.not_started ?? 0,
                 doing: item.doing ?? 0,
                 done: item.done ?? 0,
