--- a/public/BoardSummary.html
+++ b/public/BoardSummary.html
@@ -81,7 +81,7 @@
       </template>
     </div>
 
-    <script>
+    <script type="module">
       import { getNameByUserName } from '/public/js/map_usernames.js'
       new Vue({
         el: "#app_basic",
