--- a/public/BoardSummary.html
+++ b/public/BoardSummary.html
@@ -97,7 +97,7 @@
             return window.TrelloPowerUp;
           },
           iframe() {
-            return trello.iframe();
+            return this.trello.iframe();
           }
         },
         methods: {
