--- a/public/BoardSummary.html
+++ b/public/BoardSummary.html
@@ -79,7 +79,7 @@
     </div>
 
     <script type="module">
-      import { getNameByUserName } from "/public/js/global.js";
+      import { convertUsernameToName } from "/public/js/global.js";
       new Vue({
         el: "#app_basic",
         data: {
